# bonafide

./: .gitignore  CLAUDE.md  CONTRACT.md  DESIGN.md  PRODUCT.md  README.md  agent-notes.md
.claude/: settings.json
.claude/agents/: spec-writer.md  tasks-writer.md
.claude/skills/commit/: SKILL.md
.claude/skills/new-branch/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/summary/: SKILL.md
.claude/skills/unit-test-expand/: SKILL.md
apps/demo-human/: pyproject.toml
apps/demo-human/demo_human/: __init__.py  __main__.py
apps/demo-human/tests/: test_mint.py
deploy/authz/: actor-trust.yaml
services/authz/: go.mod  go.sum  tools.go
services/authz/cmd/authz/: main.go
services/authz/internal/audit/: audit.go  file.go  file_test.go
services/authz/internal/config/: config.go  config_test.go
services/authz/internal/exchange/: act_chain.go  act_chain_test.go  handler.go  handler_test.go  types.go  types_test.go
services/authz/internal/httputil/: router.go  router_test.go
services/authz/internal/keys/: keys.go  keys_test.go
services/authz/internal/policy/: policy.go  policy_test.go
services/authz/internal/trust/: static.go  static_test.go  trust.go
specs/audit-persistence/: design.md  requirements.md  tasks.md
specs/opa-policy-engine/: design.md  requirements.md  tasks.md
specs/spire-workload-identity/: design.md  requirements.md  tasks.md
specs/subagent-nesting/: design.md  requirements.md  tasks.md
specs/token-exchange-core/: design.md  requirements.md  tasks.md
specs/vault-spiffe-auth/: design.md  requirements.md  tasks.md
