[project]
name = "demo-human"
version = "0.1.0"
description = "bonafide demo: human CLI that mints a user JWT per CONTRACT.md §4"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "PyJWT[crypto]>=2.10",
    "pydantic-settings>=2.4",
]

[project.scripts]
demo-human = "demo_human.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demo_human"]

[dependency-groups]
dev = [
    "pytest>=8",
]
